--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .login-wrapper {
-    background-image: url(../../assets/backgrounds/login-bg.jpg);
+    background-image: url(../../../assets/backgrounds/login-bg.jpg);
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
