--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,6 +16,7 @@
           </mat-form-field>
         </mat-card-content>
         <button mat-stroked-button color="accent" class="btn-block" (click)="performLogin()">Entrar</button>
+        <button mat-stroked-button color="primary" class="btn-block-margin" routerLink="/register">Crear Nueva Cuenta</button>
       </form>
     </mat-card>
   
