--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,65 @@
-<p>register works!</p>
+<div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
+
+<mat-card class="box">
+    <mat-card-header>
+        <mat-card-title>Crear Nueva Cuenta</mat-card-title>
+    </mat-card-header>
+
+    <form class="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+        <mat-card-content>
+            <mat-form-field class="full-width">
+                <input matInput formControlName="username" placeholder="Usuario">
+                <mat-error *ngIf="f.username.errors && f.username.errors.required">
+                    {{requiredMessage}}
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="full-width">
+                <input matInput formControlName="password" placeholder="Contraseña" type="password">
+                <mat-error *ngIf="f.password.errors && f.password.errors.required">
+                    {{requiredMessage}}
+                </mat-error>
+                <mat-error *ngIf="f.password.errors && f.password.errors.minLength">
+                    La contraseña debe tener un mínimo de 6 caracteres.
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="full-width">
+                <input matInput formControlName="confirmPassword" placeholder="Confirmar contraseña" type="password">
+                <mat-error *ngIf="f.confirmPassword.errors && f.confirmPassword.errors.required">
+                    {{requiredMessage}}
+                </mat-error>
+                <mat-error *ngIf="f.confirmPassword.errors && f.confirmPassword.errors.mustMatch">
+                    La contraseñas no coinciden.
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="full-width">
+                <input matInput formControlName="firstName" placeholder="Nombre">
+                <mat-error *ngIf="f.firstName.errors && f.firstName.errors.required">
+                    {{requiredMessage}}
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="full-width">
+                <input matInput formControlName="lastName" placeholder="Apellido">
+                <mat-error *ngIf="f.lastName.errors && f.lastName.errors.required">
+                    {{requiredMessage}}
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="full-width">
+                <input matInput formControlName="email" placeholder="Correo electrónico" type="email">
+                <mat-error *ngIf="f.email.errors && f.email.errors.required">
+                    {{requiredMessage}}
+                </mat-error>
+                <mat-error *ngIf="f.email.errors && f.email.errors.email">
+                    El correo electrónico no es válido.
+                </mat-error>
+            </mat-form-field>
+        </mat-card-content>
+        <button mat-flat-button color="primary" class="btn-block btn-block-margin">Crear</button>
+    </form>
+</mat-card>
+      
+</div>
