--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,3 +1,4 @@
 <p>main works!</p>
 
 <button mat-stroked-button color="accent" class="btn-block" (click)="logout()">Logout</button>
+<button mat-stroked-button color="primary" class="btn-block" (click)="goToProfile()">My Profile</button>
