--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,7 +1,9 @@
 <mat-toolbar color="primary" class="app-header" *ngIf="(toolbarService.visible|async)">
     <div>SIMGAS</div>
+    
     <span class="nav-tool-items">
-        <a mat-button routerLink="login" routerLinkActive="active">Log in</a>
-        <a mat-button mat-raised-button routerLink="register" routerLinkActive="active">Register</a>
+        <a mat-button routerLink="profile" routerLinkActive="active">Mi Perfil</a>
+        <a mat-button routerLink="main" routerLinkActive="active">Sensores</a>
+        <a mat-button (click)="performLogout()">Cerrar Sesión</a>
     </span>
 </mat-toolbar>
