Update the button's styles

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
             <input [(ngModel)]="password" name="password" matInput placeholder="Contraseña" type='password'>
           </mat-form-field>
         </mat-card-content>
-        <button mat-stroked-button color="accent" class="btn-block" (click)="performLogin()">Entrar</button>
+        <button mat-raised-button color="primary" class="btn-block" (click)="performLogin()">Entrar</button>
         <button mat-stroked-button color="primary" class="btn-block-margin" routerLink="/register">Crear Nueva Cuenta</button>
       </form>
     </mat-card>
