--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -38,7 +38,7 @@
                         </mat-error>
                     </mat-form-field>
                 </mat-card-content>
-                <button mat-flat-button color="primary" class="btn-block btn-block-margin">Editar</button>
+                <button mat-raised-button color="primary" class="btn-block btn-block-margin">Editar</button>
             </form>
         </mat-card>
               
