--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -58,7 +58,7 @@
                 </mat-error>
             </mat-form-field>
         </mat-card-content>
-        <button mat-flat-button color="primary" class="btn-block btn-block-margin">Crear</button>
+        <button mat-raised-button color="primary" class="btn-block btn-block-margin">Crear</button>
     </form>
 </mat-card>
       
