--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,5 +1,10 @@
+<div>
+    <h1>
+        SIMGAS-IPTV
+    </h1>
+</div>
+
 <mat-toolbar color="primary" class="app-header" *ngIf="(toolbarService.visible|async)">
-    <div>SIMGAS</div>
     
     <span class="nav-tool-items">
         <a mat-button routerLink="profile" routerLinkActive="active">Mi Perfil</a>
