Implement the time ago package and improve some layout components

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -4,7 +4,9 @@
             <mat-card>
                 <mat-card-header>
                     <mat-card-title class="primary-color">{{sensor.Name}}</mat-card-title>
-                    <mat-card-subtitle>{{sensor.LastSensorReading.CreatedDate}}</mat-card-subtitle>
+                    <mat-card-subtitle>
+                        {{parseDate(sensor.LastSensorReading.CreatedDate) | amLocal | amLocale: 'es' | amTimeAgo}}
+                    </mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
                     <div fxLayout="row" fxLayoutAlign="space-between">
@@ -30,7 +32,7 @@
                     </mat-progress-bar>
                 </mat-card-content>
                 <mat-card-actions>
-                    <button mat-button>DETAILS</button>
+                    <button mat-button>VER DETALLES</button>
                 </mat-card-actions>
             </mat-card>
         </mat-grid-tile>
