Implement the Daily Averages chart using the Highcharts module

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -37,4 +37,9 @@
             </mat-card>
         </mat-grid-tile>
     </mat-grid-list>
+    <div fxLayout="row">
+        <mat-card fxFlex="100%" fxLayoutAlign="center">
+        <div fxFlex [chart]="chart"></div>
+    </mat-card>
+    </div>
 </div>
