--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,7 +49,10 @@ h1 {
   * {
     font-family: Arial, Helvetica, sans-serif;
   }
-html, body { height: 100%; }
+html, body { 
+  height: 100%; 
+  background-color: #F5F5F5;
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .primary-background {
