--- a/src/app/components/sensor-detail/sensor-detail.component.scss
+++ b/src/app/components/sensor-detail/sensor-detail.component.scss
@@ -29,3 +29,12 @@ mat-card-actions {
     line-height: 1em;
     overflow: hidden;
 }
+
+.aq-value {
+    font-weight: bold;
+}
+
+.aq-name {
+    font-weight: bold;
+    overflow: hidden;
+}
