--- a/src/styles.scss
+++ b/src/styles.scss
@@ -146,3 +146,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
   padding: 0.8375em 0;
 }
+
+.text-center {
+  text-align: center;
+}
