--- a/src/app/components/sensor-detail/sensor-detail.component.html
+++ b/src/app/components/sensor-detail/sensor-detail.component.html
@@ -35,4 +35,42 @@
             <div fxFlex [chart]="chart"></div>
         </mat-card>
     </div>
+    <div fxLayout="row">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title class="primary-color">Lecturas de los últimos 7 días</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <table fxFlex *ngIf="sensorReadings" mat-table [dataSource]="sensorReadings">
+                    <ng-container matColumnDef="date">
+                        <th mat-header-cell *matHeaderCellDef>Fecha</th>
+                        <td mat-cell *matCellDef="let element">
+                            {{parseDate(element.CreatedDate) | amLocal | amLocale: 'es' | amDateFormat: 'YYYY-MM-DD HH:mm'}}
+                        </td>
+                    </ng-container>
+                    <ng-container matColumnDef="air-quality">
+                        <th mat-header-cell *matHeaderCellDef>Calidad de Aire</th>
+                        <td mat-cell *matCellDef="let element">{{element.AirQuality.Name}}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="sensor-reading">
+                        <th mat-header-cell *matHeaderCellDef>Valor de Lectura</th>
+                        <td mat-cell *matCellDef="let element">{{element.GasPpm}} ppm</td>
+                    </ng-container>
+                    <ng-container matColumnDef="sensor-reading-bar">
+                        <th mat-header-cell *matHeaderCellDef>Porcentaje Relativo</th>
+                        <td mat-cell *matCellDef="let element">
+                            <mat-progress-bar
+                                [color]="element.AirQuality.PrimaryColor"
+                                [value]="element.GasPercentage * 100">
+                            </mat-progress-bar>
+                            <span>{{(element.GasPercentage * 100).toFixed(0)}}%</span>
+                        </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            </mat-card-content>
+        </mat-card>
+    </div>
 </div>
