--- a/src/app/components/sensor-detail/sensor-detail.component.html
+++ b/src/app/components/sensor-detail/sensor-detail.component.html
@@ -31,8 +31,13 @@
                 </mat-card-content>
             </mat-card>
         </div>
-        <mat-card fxFlex="65%" fxFlex.lt-md="100%" fxLayoutAlign="center" *ngIf="chart">
-            <div fxFlex [chart]="chart"></div>
+        <mat-card fxFlex="65%" fxFlex.lt-md="100%" *ngIf="chart">
+            <mat-card-header>
+                <mat-card-title class="primary-color">Promedio Diario de Lecturas</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <div fxFlex [chart]="chart"></div>
+            </mat-card-content>
         </mat-card>
     </div>
     <div fxLayout="row">
@@ -45,7 +50,7 @@
                     <ng-container matColumnDef="date">
                         <th mat-header-cell *matHeaderCellDef>Fecha</th>
                         <td mat-cell *matCellDef="let element">
-                            {{parseDate(element.CreatedDate) | amLocal | amLocale: 'es' | amDateFormat: 'YYYY-MM-DD HH:mm'}}
+                            {{parseDate(element.CreatedDate) | amLocal | amLocale: 'es' | amDateFormat: 'DD/MM/YYYY HH:mm'}}
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="air-quality">
@@ -63,7 +68,7 @@
                                 [color]="element.AirQuality.PrimaryColor"
                                 [value]="element.GasPercentage * 100">
                             </mat-progress-bar>
-                            <span>{{(element.GasPercentage * 100).toFixed(0)}}%</span>
+                            <span>{{math.min((element.GasPercentage * 100), 100).toFixed(0)}}%</span>
                         </td>
                     </ng-container>
 
