--- a/src/app/components/sensor-detail/sensor-detail.component.html
+++ b/src/app/components/sensor-detail/sensor-detail.component.html
@@ -50,7 +50,7 @@
                     <ng-container matColumnDef="date">
                         <th mat-header-cell *matHeaderCellDef>Fecha</th>
                         <td mat-cell *matCellDef="let element">
-                            {{parseDate(element.CreatedDate) | amLocal | amLocale: 'es' | amDateFormat: 'DD/MM/YYYY HH:mm'}}
+                            {{parseDate(element.CreatedDate) | amLocal | amDateFormat: 'DD/MM/YYYY HH:mm'}}
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="air-quality">
