--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,5 +1,5 @@
-<div class="wrapper" fxLayout="column" fxLayoutGap="10px">
-    <mat-grid-list [cols]="cols" (window:resize)="onResize($event)" gutterSize="10px">
+<div class="wrapper" fxLayout="column" fxLayoutGap="20px">
+    <mat-grid-list [cols]="cols" rowHeight="250px" (window:resize)="onResize($event)" gutterSize="10px">
         <mat-grid-tile *ngFor="let sensor of sensors">
             <mat-card>
                 <mat-card-header>
@@ -36,14 +36,12 @@
             </mat-card>
         </mat-grid-tile>
     </mat-grid-list>
-    <div fxLayout="row" *ngIf="chart">
-        <mat-card fxFlexFill>
-            <mat-card-header>
-                <mat-card-title class="primary-color">Promedio Diario de Lecturas</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-                <div fxFlex [chart]="chart"></div>
-            </mat-card-content>
-        </mat-card>
-    </div>
+    <mat-card fxFlexFill fxFlex="100%" *ngIf="chart">
+        <mat-card-header>
+            <mat-card-title class="primary-color">Promedio Diario de Lecturas</mat-card-title>
+        </mat-card-header>
+        <mat-card-content> 
+            <div fxFlex [chart]="chart"></div>
+        </mat-card-content>
+    </mat-card>
 </div>
