--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 </mat-toolbar>
 
 <!-- Side Nav (mobile) -->
-<mat-sidenav-container>
+<mat-sidenav-container [style.display]="isToolbarVisible ? 'block' : 'inherit'">
     <mat-sidenav color="primary" #sidenav (click)="sidenav.toggle()" fxLayout="column" mode="over" opened="false" fxHide.gt-sm="true">
         <div fxLayout="column">
             <a mat-button routerLink="profile" routerLinkActive="active">Mi Perfil</a>
@@ -24,7 +24,7 @@
             <a mat-button (click)="performLogout()">Cerrar Sesión</a>
         </div>
     </mat-sidenav>
-    <mat-sidenav-content>
+    <mat-sidenav-content fxFlexFill>
         <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
