Create the About Us component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
     <span class="nav-tool-items" fxHide.lt-md="true">
         <a mat-button routerLink="profile" routerLinkActive="active">Mi Perfil</a>
         <a mat-button routerLink="main" routerLinkActive="active">Sensores</a>
+        <a mat-button routerLink="about-us" routerLinkActive="active">Acerca de Nosotros</a>
         <a mat-button (click)="performLogout()">Cerrar Sesión</a>
     </span>
 </mat-toolbar>
@@ -21,6 +22,7 @@
         <div fxLayout="column">
             <a mat-button routerLink="profile" routerLinkActive="active">Mi Perfil</a>
             <a mat-button routerLink="main" routerLinkActive="active">Sensores</a>
+            <a mat-button routerLink="about-us" routerLinkActive="active">Acerca de Nosotros</a>
             <a mat-button (click)="performLogout()">Cerrar Sesión</a>
         </div>
     </mat-sidenav>
