--- a/src/app/components/sensor-detail/sensor-detail.component.html
+++ b/src/app/components/sensor-detail/sensor-detail.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper" fxLayout="column" fxLayoutGap="10px">
-    <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="stretch" fxLayoutGap="10px">
+    <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="space-between" fxLayoutGap="10px">
         <div fxLayout="column" fxLayoutAlign="stretch" fxFlex="35%" fxLayoutGap="10px">
             <mat-card *ngIf='sensor' fxFlex="50%">
                 <mat-card-header>
