--- a/src/app/components/sensor-detail/sensor-detail.component.scss
+++ b/src/app/components/sensor-detail/sensor-detail.component.scss
@@ -38,3 +38,11 @@ mat-card-actions {
     font-weight: bold;
     overflow: hidden;
 }
+
+.mat-row {
+    height: auto;
+}
+  
+.mat-cell {
+    padding: 8px 8px 8px 0;
+}
