Add empty message and send the start date for the readings table

--- a/src/app/components/sensor-detail/sensor-detail.component.html
+++ b/src/app/components/sensor-detail/sensor-detail.component.html
@@ -75,6 +75,9 @@
                     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table>
+                <div *ngIf="!sensorReadings" fxFlex>
+                    <span fxFlex class="text-center">No data available</span>
+                </div>
             </mat-card-content>
         </mat-card>
     </div>
