Add mail links to the About Us component

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -56,12 +56,22 @@
             <mat-card-content>
                 <div fxLayout="row" fxLayoutAlign="center" fxLayoutGap="10px">
                     <div fxLayout="column" fxFlex="50%" fxLayoutAlign="space-between" fxLayoutGap="10px">
-                        <img class="person-avatar" src="../../../assets/profile/lucas_cabrales.jpeg"/>
+                        <img class="person-avatar" src="../../../assets/profile/lucas_cabrales.jpg"/>
                         <span class="person-name">Lucas Cabrales</span>
+                        <div fxLayout="row" fxFlex fxLayoutAlign="center">
+                            <a href="mailto:lucas_cabrales@hotmail.com" target="_top">
+                                <mat-icon aria-hidden="false" color="primary" aria-label="E-mail">email</mat-icon>
+                            </a>
+                        </div>
                     </div>
                     <div fxLayout="column" fxFlex="50%" fxLayoutAlign="space-between" fxLayoutGap="10px">
                         <img class="person-avatar" src="../../../assets/profile/default.jpg"/>
                         <span class="person-name">Eric Pérez</span>
+                        <div fxLayout="row" fxFlex fxLayoutAlign="center">
+                            <a href="mailto:eric.enrique.perez24@gmail.com" target="_top">
+                                <mat-icon aria-hidden="false" color="primary" aria-label="E-mail">email</mat-icon>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </mat-card-content>
@@ -75,10 +85,20 @@
                     <div fxLayout="column" fxFlex="50%" fxLayoutAlign="space-between" fxLayoutGap="10px">
                         <img class="person-avatar" src="../../../assets/profile/default.jpg"/>
                         <span class="person-name">María Vélez</span>
+                        <div fxLayout="row" fxFlex fxLayoutAlign="center">
+                            <a href="mailto:maria.velez@utp.ac.pa" target="_top">
+                                <mat-icon aria-hidden="false" color="primary" aria-label="E-mail">email</mat-icon>
+                            </a>
+                        </div>
                     </div>
                     <div fxLayout="column" fxFlex="50%" fxLayoutAlign="space-between" fxLayoutGap="10px">
                         <img class="person-avatar" src="../../../assets/profile/default.jpg"/>
                         <span class="person-name">Cristian Pinzón</span>
+                        <div fxLayout="row" fxFlex fxLayoutAlign="center">
+                            <a href="mailto:cristian.pinzon@utp.ac.pa" target="_top">
+                                <mat-icon aria-hidden="false" color="primary" aria-label="E-mail">email</mat-icon>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </mat-card-content>
