Update the favicon and the app logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
             <mat-icon>menu</mat-icon>
         </button>
     </div>
-    <a mat-button class="site-name" routerLink="/">
-        <h1>SIMGAS-IPTV</h1>
+    <a mat-button class="app-logo" routerLink="/">
+        <img src="../assets/logo_horizontal_white.png">
     </a>
     <span class="nav-tool-items" fxHide.lt-md="true">
         <div [style.display]="isToolbarVisible ? 'flex' : 'none'">
